--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -110,6 +110,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: var(--SecondaryColor);
 }
 
 .home .homeContent .cardDiv .label_total .total {
@@ -156,8 +157,8 @@
   margin-left: 10px;
 }
 
-.home .homeContent .cardDiv .input .input[type=range] {
-  background: #352e35;
+.home .homeContent .cardDiv .input input[type=range] {
+  background: #793b79;
 }
 
 .home .homeContent .cardDiv .searchOptions {
@@ -208,5 +209,71 @@
 
 .home .homeContent .homeFooterIcons .icon:hover {
   color: var(--PrimaryColor);
+}
+
+@media screen and (min-width: 500px) {
+  .home .homeContent .textDiv .smallText {
+    font-size: 16px;
+  }
+  .home .homeContent .textDiv .homeTitle {
+    position: relative;
+    font-size: 2.3rem;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .home .homeContent .textDiv .homeTitle::after {
+    position: absolute;
+    content: '';
+    background: var(--SecondaryColor);
+    height: 5px;
+    width: 145px;
+    right: 0px;
+    bottom: 5px;
+    z-index: -1;
+  }
+  .home .homeContent .cardDiv {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 660px) {
+  .home .homeContent .cardDiv {
+    padding: 2rem 1rem;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 940px) {
+  .home {
+    height: 70vh;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .home {
+    height: 80vh;
+  }
+  .home .homeContent {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .home .homeContent .cardDiv {
+    padding: 2rem 1rem;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+  .home .homeContent .cardDiv .input {
+    margin-bottom: 1rem;
+  }
+  .home .homeContent .cardDiv .searchOptions {
+    bottom: -1rem;
+    padding: 8px 1rem;
+  }
+  .home .homeContent .cardDiv .searchOptions span {
+    font-size: 17px;
+  }
 }
 /*# sourceMappingURL=home.css.map */
