--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -172,4 +172,31 @@
       align-self: center;
   font-size: 18px;
 }
+
+/* media queries */
+@media screen and (min-width: 500px) {
+  .title {
+    font-size: 1.5rem;
+  }
+  .title::after {
+    width: 155px !important;
+  }
+  .secContent {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .secContent .singleDestiantion {
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 840px) {
+  .secContent {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+  .secContent .singleDestiantion {
+    height: auto;
+  }
+}
 /*# sourceMappingURL=main.css.map */
