--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -153,3 +153,32 @@
         }
     }
 }
+
+/* media queries */
+
+@media screen and (min-width: 500px){
+    .title{
+        font-size: 1.5rem;
+        &::after{
+            width: 155px !important;
+        }
+    }
+
+    .secContent{
+        grid-template-columns: repeat(2, 1fr);
+
+        .singleDestiantion{
+            height: auto;
+        }
+    }
+}
+
+@media  screen and (min-width: 840px) {
+    .secContent{
+        grid-template-columns: repeat(3, 1fr);
+
+        .singleDestiantion{
+            height: auto;
+        }
+    }
+}
